# neatrs

./: .gitignore  Cargo.toml  README.md
examples/: evolve_xor.rs
examples/parameters/: evolve_xor.yaml
src/: community.rs  concurrency.rs  ecology.rs  lib.rs  network.rs  neural_network.rs
src/community/: community_params.rs  fitness_updater.rs  genome.rs  innovation_tracker.rs  mutation.rs  organism.rs  recombination.rs  species.rs
src/concurrency/: thread_pool.rs
src/ecology/: community.rs  community_params.rs  genome.rs  organism.rs  species.rs
src/genome/: genome.rs
src/network/: edge.rs  gene.rs  neural_network.rs  node.rs
src/neural_network/: edge.rs  graph.rs  node.rs
