[package]
name = "neatrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "evolve_xor"
path = "examples/evolve_xor.rs"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
crossbeam = "0.8.2"
topo_sort = "0.4"
rstest = "0.17.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_yml = "0.0.7"

[dev-dependencies]
ndarray = "0.15.6"

[build]
profiler = true
